# edgar-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  handoff.md  pyproject.toml
.dagster/: dagster.yaml
.github/workflows/: ci.yml
dashboard/: evidence.config.yaml
dashboard/.evidence/customization/: .profile.json
dashboard/pages/: cluster-buys.md  index.md
dashboard/pages/issuers/: [issuer_cik].md
dashboard/pages/owners/: [owner_cik].md
dashboard/sources/edgar/: connection.yaml  insider_flows.sql  owner_transactions.sql  sp500.sql
dbt/: dbt_project.yml  profiles.example.yml
dbt/models/marts/: fct_insider_flows.sql  fct_owner_transactions.sql
dbt/models/staging/: schema.yml  stg_form4_transactions.sql  stg_sp500.sql
dbt/tests/: assert_amendment_supersession.sql  assert_first_buy_invariant.sql  assert_no_implausible_values.sql
deploy/: Caddyfile  README.md  backfill.sh  backup.sh
docs/superpowers/plans/: 2026-07-19-frontend-sharpening.md  2026-07-20-sp500-and-backfill.md
docs/superpowers/specs/: 2026-07-19-frontend-sharpening-design.md  2026-07-20-sp500-and-backfill-design.md
src/edgar_pipeline/: __init__.py  config.py  daily_index.py  definitions.py  form4.py  http.py  models.py  smoke.py  sp500.py  storage.py
tests/: test_daily_index.py  test_definitions.py  test_form4.py  test_sp500.py  test_storage.py
tests/fixtures/: form4_sample.xml  form4_tz_suffix_date.xml  form_index_2026_wrapped_header.idx  form_index_sample.idx  sp500_sample.csv
